Fixed alignment

--- a/angular-spotify-app/src/app/app.component.css
+++ b/angular-spotify-app/src/app/app.component.css
@@ -3,8 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 90vh;
-
-} 
+}
 
 .container .box {
     background: #222;
@@ -13,7 +12,6 @@
     background-color: #222;
     transition: 1s;
     width: 100%;
-    height: 80vh;
     overflow:auto;
 }
 
